--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "bower_components",
     "output"
   ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/paf31/purescript-lens-simple.git"
